--- a/index.html
+++ b/index.html
@@ -9,28 +9,25 @@
   <link rel="icon" type="image/png" href="https://via.placeholder.com/32x32.png?text=B" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Manrope:wght@400;600&family=Sora:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --sky-blue: #4BA3FF;
-      --deep-indigo: #2B2D80;
-      --soft-mint: #B9FBC0;
-      --warm-gray: #ECECEC;
-      --dark-charcoal: #2E2E2E;
-      --pure-white: #FFFFFF;
+      --dark-charcoal: #252a34;
+      --green: #59a52c;
+      --pure-white: #ffffff;
     }
 
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: var(--warm-gray);
+      font-family: 'Signika', sans-serif;
+      background-color: var(--pure-white);
       color: var(--dark-charcoal);
       overflow-x: hidden;
     }
 
     header {
-      background-color: var(--sky-blue);
+      background-color: var(--green);
       padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -55,7 +52,7 @@
     }
 
     nav a:hover {
-      color: var(--deep-indigo);
+      color: var(--dark-charcoal);
     }
 
     main {
@@ -73,11 +70,11 @@
     }
 
     h2 {
-      font-family: 'Manrope', sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 2.5rem;
       text-align: center;
       margin-bottom: 2rem;
-      color: var(--deep-indigo);
+      color: var(--green);
     }
 
     p {
@@ -129,7 +126,7 @@
 
     .card-icon {
       font-size: 3rem;
-      color: var(--sky-blue);
+      color: var(--green);
       margin-bottom: 1rem;
     }
 
@@ -177,11 +174,11 @@
       margin-bottom: 1rem;
       border: 1px solid #ccc;
       border-radius: 0.5rem;
-      font-family: 'Sora', sans-serif;
+      font-family: 'Open Sans', sans-serif;
     }
 
     .contact-form button {
-      background-color: var(--deep-indigo);
+      background-color: var(--dark-charcoal);
       color: var(--pure-white);
       border: none;
       padding: 0.8rem 1.5rem;
@@ -192,8 +189,8 @@
     }
 
     .contact-form button:hover {
-      background-color: var(--sky-blue);
-      color: var(--deep-indigo);
+      background-color: var(--green);
+      color: var(--dark-charcoal);
     }
 
     footer {
@@ -201,7 +198,7 @@
       padding: 2rem;
       font-size: 0.9rem;
       color: var(--dark-charcoal);
-      background-color: var(--warm-gray);
+      background-color: var(--pure-white);
     }
   </style>
 </head>
