--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BiometricPay - Next-Gen Payment App</title>
+  <title>FacioPay - Next-Gen Payment App</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://via.placeholder.com/32x32.png?text=B" />
+  <link rel="icon" type="image/png" href="https://via.placeholder.com/32x32.png?text=F" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -72,6 +72,7 @@
     h2 {
       font-family: 'Roboto', sans-serif;
       font-size: 2.5rem;
+      font-weight: bold;
       text-align: center;
       margin-bottom: 2rem;
       color: var(--green);
@@ -205,7 +206,7 @@
 <body>
 
   <header>
-    <img src="https://via.placeholder.com/150x50.png?text=BiometricPay" alt="BiometricPay Logo" class="logo">
+    <img src="https://drive.google.com/uc?export=view&id=1LQXjCgJXpf-mEW-qAb8-UEeUP9wHVnNk" alt="FacioPay Logo" class="logo">
     <nav>
       <a href="javascript:void(0);" onclick="showTab('whatwedo')">What We Do</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
@@ -217,7 +218,7 @@
     <!-- What We Do Section -->
     <section id="whatwedo" class="section active">
       <h2>What We Do</h2>
-      <p>BiometricPay makes payments effortless — authenticate with a simple face scan and hand gesture to pay or transfer money instantly and securely.</p>
+      <p>FacioPay is revolutionizing the way you make payments. Imagine paying at your favorite store or splitting a bill with a friend, without ever needing your credit card or phone. Simply scan your face and go. We’re bringing the future of payments to the present, making transactions seamless, secure, and effortless. Experience the next level of convenience with FacioPay.</p>
 
       <div class="video-wrapper">
         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Product Demo" allowfullscreen></iframe>
@@ -225,19 +226,19 @@
 
       <div class="cards">
         <div class="card">
-          <div class="card-icon">🔒</div>
-          <h3>Top Security</h3>
-          <p>World-class biometric encryption to keep every transaction 100% safe.</p>
+          <div class="card-icon">👐</div>
+          <h3>Hands-Free Payment</h3>
+          <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
         </div>
         <div class="card">
           <div class="card-icon">⚡</div>
-          <h3>Lightning Fast</h3>
-          <p>Send and receive money faster than ever — just with your smile and a gesture.</p>
+          <h3>Faster Checkout</h3>
+          <p>Waiting in line is a hassle. FacioPay reduces checkout time, allowing both merchants and consumers to complete transactions instantly. Experience faster payments and more efficient service, all without the usual delays.</p>
         </div>
         <div class="card">
-          <div class="card-icon">🌎</div>
-          <h3>Global Access</h3>
-          <p>One seamless biometric identity for payments across the world.</p>
+          <div class="card-icon">🔒</div>
+          <h3>Highly Secure</h3>
+          <p>We prioritize your privacy. Using state-of-the-art biometric encryption technology, we ensure your data is stored securely and only used for transaction authentication. Your information is never shared, and you have full control—you can delete your data anytime. With FacioPay, security is our top priority.</p>
         </div>
       </div>
     </section>
@@ -247,47 +248,47 @@
       <h2>Our Founders</h2>
       <div class="founders">
         <div class="founder">
-          <img src="https://via.placeholder.com/150" alt="Founder 1">
-          <h3>Jane Doe</h3>
-          <p>Fintech innovator leading advancements in biometric payment security for 15+ years.</p>
+          <img src="https://media.licdn.com/dms/image/v2/C4E03AQG-d3ARyteo1w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1592196724834?e=1750896000&v=beta&t=3X03jhWyKBvhBNRNsF4NqK0wMC2LVs2VJLMU50SBkOg" alt="Kanak Agrawal">
+          <h3>Kanak Agrawal</h3>
+          <p>Kanak Agrawal, Founder of FacioPay, is a seasoned expert in machine learning and data science with a focus on financial analytics. With over 8 years of experience at PayPal and Capital One, Kanak specializes in predictive modeling, risk assessment, and data-driven decision-making. He has developed advanced financial forecasting models and machine learning solutions, empowering businesses to make smarter, data-backed decisions. Kanak holds a Master’s degree in Quantitative Management from Duke University, specializing in Business Analytics and Finance, and a Bachelor’s degree in Electrical Engineering from IIT Kharagpur. His leadership at FacioPay ensures the company harnesses the power of data to drive innovation in digital payments.</p>
         </div>
         <div class="founder">
-          <img src="https://via.placeholder.com/150" alt="Founder 2">
-          <h3>John Smith</h3>
-          <p>Architect of mobile payment platforms used by millions, now building the future.</p>
+          <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1750896000&v=beta&t=wUVKRbnSIwmi5zzw4bkHGDL9BTn2AOclb_ps5nnRZAQ" alt="Harish Bhakuni">
+          <h3>Harish Bhakuni</h3>
+          <p>Harish Bhakuni is the Founder of FacioPay, driving technological innovation in the fintech sector with a focus on secure, seamless payment solutions. With over six years of experience at Amazon Web Services (AWS), Harish has worked on cutting-edge distributed systems in storage and security domains. His contributions to the OpenSearch Project and expertise in cloud-native architecture have shaped modern, scalable data platforms. A graduate of GL Bajaj Institute of Technology, Harish is passionate about leveraging technology to solve complex challenges and is dedicated to ensuring FacioPay’s solutions meet the highest standards of security, scalability, and innovation.</p>
         </div>
         <div class="founder">
-          <img src="https://via.placeholder.com/150" alt="Founder 3">
-          <h3>Emily Zhang</h3>
-          <p>Machine learning pioneer applying AI to make identity authentication seamless and global.</p>
+          <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1750896000&v=beta&t=KTcwk3er1Z1AsIiYDJBVeN51w7gtOWTcHG3oU71jtDo">
+          <h3>Siddharth Pandey</h3>
+          <p>Siddharth Pandey is the Founder of FacioPay, a fintech company revolutionizing payments through facial recognition technology. With a background in software engineering, Siddharth has held key roles at Amazon and LinkedIn, specializing in cloud technologies and software development. At Amazon, he contributed to Alexa’s cloud services, optimizing features for millions of users and devices. Holding a Master’s in Computer Science from Arizona State University and a Bachelor’s from Delhi College of Engineering, Siddharth excels in AWS, Java, distributed systems, and data analytics. His leadership at FacioPay merges technical expertise with a vision to transform digital payments.</p>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Us Section -->
     <section id="contact" class="section">
       <h2>Contact Us</h2>
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+      <div class="contact-form">
+        <form>
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 BiometricPay. Built for a better future.
+    <p>&copy; 2025 FacioPay. All rights reserved.</p>
   </footer>
 
   <script>
-    function showTab(tabId) {
+    function showTab(tab) {
       const sections = document.querySelectorAll('.section');
       sections.forEach(section => section.classList.remove('active'));
-
-      document.getElementById(tabId).classList.add('active');
+      document.getElementById(tab).classList.add('active');
     }
   </script>
-
 </body>
 </html>
