--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>FacioPay - Next-Gen Payment App</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://via.placeholder.com/32x32.png?text=F" />
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/faciopay%20symbol.png" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -206,7 +206,7 @@
 <body>
 
   <header>
-    <img src="https://drive.google.com/uc?export=view&id=1LQXjCgJXpf-mEW-qAb8-UEeUP9wHVnNk" alt="FacioPay Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/ff31890795f2fdb7c6802f1c0fc821fd61f2c070/faciopay%20Logo.png" alt="FacioPay Logo" class="logo">
     <nav>
       <a href="javascript:void(0);" onclick="showTab('whatwedo')">What We Do</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
