--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/faciopay%20symbol.png" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@700&family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --dark-charcoal: #252a34;
-      --green: #59a52c;
-      --pure-white: #ffffff;
+      --dark-charcoal: #2A2A2A;
+      --copper: #B87333;
+      --matte-black: #2A2A2A;
+      --soft-silver: #C0C0C0;
+      --pure-white: #FFFFFF;
     }
 
     body {
       margin: 0;
-      font-family: 'Signika', sans-serif;
+      font-family: 'Lato', sans-serif;
       background-color: var(--pure-white);
       color: var(--dark-charcoal);
       overflow-x: hidden;
     }
 
     header {
-      background-color: var(--green);
+      background-color: var(--matte-black);
       padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -39,7 +41,7 @@
     }
 
     .logo {
-      height: 50px;
+      height: 80px; /* Increased logo size */
     }
 
     nav a {
@@ -52,7 +54,7 @@
     }
 
     nav a:hover {
-      color: var(--dark-charcoal);
+      color: var(--soft-silver);
     }
 
     main {
@@ -70,12 +72,12 @@
     }
 
     h2 {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Open Sans', sans-serif;
       font-size: 2.5rem;
       font-weight: bold;
       text-align: center;
       margin-bottom: 2rem;
-      color: var(--green);
+      color: var(--copper);
     }
 
     p {
@@ -127,7 +129,7 @@
 
     .card-icon {
       font-size: 3rem;
-      color: var(--green);
+      color: var(--copper);
       margin-bottom: 1rem;
     }
 
@@ -190,7 +192,7 @@
     }
 
     .contact-form button:hover {
-      background-color: var(--green);
+      background-color: var(--copper);
       color: var(--dark-charcoal);
     }
 
@@ -268,15 +270,9 @@
     <!-- Contact Us Section -->
     <section id="contact" class="section">
       <h2>Contact Us</h2>
-      <div class="contact-form">
-        <form>
-          <input type="text" name="name" placeholder="Your Name" required>
-          <input type="email" name="email" placeholder="Your Email" required>
-          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
+      <p>If you have any questions or need assistance, feel free to reach out to us at <a href="mailto:faciopay2025@gmail.com">faciopay2025@gmail.com</a>.</p>
     </section>
+
   </main>
 
   <footer>
