--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
       <div class="cards">
         <div class="card">
-          <div class="card-icon">👐</div>
+          <div class="card-icon">👋</div>
           <h3>Hands-Free Payment</h3>
           <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
         </div>
