--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
 
     .logo {
-      height: 80px; /* Increased logo size */
+      height: 100px; /* Increased logo size */
     }
 
     nav a {
@@ -262,7 +262,7 @@
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1750896000&v=beta&t=KTcwk3er1Z1AsIiYDJBVeN51w7gtOWTcHG3oU71jtDo">
           <h3>Siddharth Pandey</h3>
-          <p>Siddharth has almost a decade of work experience in software engineering. Siddharth has held key roles at Amazon and LinkedIn, specializing in cloud technologies and software development. At Amazon, he contributed to Alexa’s cloud services, optimizing features for millions of users and devices. Holding a Master’s in Computer Science from Arizona State University and a Bachelor’s from Delhi College of Engineering, Siddharth excels in AWS, Java, distributed systems, and data analytics. His leadership at FacioPay merges technical expertise with a vision to transform digital payments.</p>
+          <p>Siddharth Pandey has almost a decade of work experience in software engineering. Siddharth has held key roles at Amazon and LinkedIn, specializing in cloud technologies and software development. At Amazon, he contributed to Alexa’s cloud services, optimizing features for millions of users and devices. Holding a Master’s in Computer Science from Arizona State University and a Bachelor’s from Delhi College of Engineering, Siddharth excels in AWS, Java, distributed systems, and data analytics. His leadership at FacioPay merges technical expertise with a vision to transform digital payments.</p>
         </div>
       </div>
     </section>
