--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     header {
       background-color: var(--matte-black);
-      padding: 1.5rem 2rem;
+      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -38,17 +38,25 @@
       position: sticky;
       top: 0;
       z-index: 100;
+      flex-wrap: wrap;
     }
 
     .logo {
-      height: 100px; /* Increased logo size */
+      height: 80px;
+    }
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 0.5rem;
     }
 
     nav a {
-      margin: 0 1.5rem;
+      margin: 0 1rem;
       color: var(--pure-white);
       text-decoration: none;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 500;
       transition: color 0.3s;
     }
@@ -58,7 +66,7 @@
     }
 
     main {
-      padding: 4rem 2rem;
+      padding: 2rem 1rem;
       max-width: 1200px;
       margin: auto;
     }
@@ -73,10 +81,10 @@
 
     h2 {
       font-family: 'Open Sans', sans-serif;
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       font-weight: bold;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
       color: var(--copper);
     }
 
@@ -84,42 +92,54 @@
       text-align: center;
       font-size: 1.1rem;
       max-width: 800px;
-      margin: 0 auto 2rem;
+      margin: 0 auto 1.5rem;
     }
 
-    .video-wrapper {
-      width: 90%;
-      height: 250px;
-      margin: 2rem auto;
-      position: relative;
-      border-radius: 1rem;
-      overflow: hidden;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.15);
-    }
+  .video-wrapper {
+  width: 100%;
+  max-width: 800px;
+  margin: 2rem auto;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+  position: relative;
+  height: 350px; /* Fixed height */
+}
 
-    .video-wrapper iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+.video-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
 
+@media (max-width: 768px) {
+  .video-wrapper {
+    height: 250px; /* Shorter height for tablets and small laptops */
+  }
+}
+
+@media (max-width: 480px) {
+  .video-wrapper {
+    height: 200px; /* Very compact for mobile */
+  }
+}
     .cards {
       display: flex;
-      justify-content: space-around;
       flex-wrap: wrap;
-      margin-top: 3rem;
+      justify-content: center;
       gap: 2rem;
+      margin-top: 3rem;
     }
 
     .card {
       background-color: var(--pure-white);
-      flex: 1;
-      min-width: 250px;
+      flex: 1 1 300px;
       padding: 2rem;
       border-radius: 1rem;
       text-align: center;
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       transition: all 0.3s;
+      max-width: 350px;
     }
 
     .card:hover {
@@ -198,13 +218,70 @@
 
     footer {
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem;
       font-size: 0.9rem;
       color: var(--dark-charcoal);
       background-color: var(--pure-white);
     }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .logo {
+        height: 60px;
+      }
+
+      nav {
+        flex-direction: column;
+      }
+
+      nav a {
+        margin: 0.5rem 0;
+        font-size: 1rem;
+      }
+
+      h2 {
+        font-size: 2rem;
+      }
+
+      .card {
+        max-width: 100%;
+      }
+
+      .video-wrapper {
+        aspect-ratio: 16/9;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav {
+        margin-top: 1rem;
+      }
+
+      .logo {
+        height: 50px;
+      }
+
+      h2 {
+        font-size: 1.8rem;
+      }
+
+      p {
+        font-size: 1rem;
+        padding: 0 1rem;
+      }
+
+      .card-icon {
+        font-size: 2.5rem;
+      }
+    }
   </style>
 </head>
+
 <body>
 
   <header>
@@ -217,14 +294,17 @@
   </header>
 
   <main>
-    <!-- What We Do Section -->
     <section id="whatwedo" class="section active">
       <h2>What We Do</h2>
       <p>FacioPay is revolutionizing the way you make payments. Imagine paying at your favorite store or splitting a bill with a friend, without ever needing your credit card or phone. Simply scan your face and go. We’re bringing the future of payments to the present, making transactions seamless, secure, and effortless. Experience the next level of convenience with FacioPay.</p>
 
-      <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/watch?v=YX8BzK_LU0E&t=33s" title="Product Demo" allowfullscreen></iframe>
-      </div>
+    <div class="video-wrapper">
+  <iframe 
+    src="https://www.youtube.com/embed/YX8BzK_LU0E?start=33" 
+    title="Product Demo" 
+    allowfullscreen>
+  </iframe>
+</div>
 
       <div class="cards">
         <div class="card">
@@ -245,7 +325,6 @@
       </div>
     </section>
 
-    <!-- Founders Section -->
     <section id="founders" class="section">
       <h2>Our Founders</h2>
       <div class="founders">
@@ -260,19 +339,17 @@
           <p>Harish Bhakuni has over six years of experience at Amazon Web Services (AWS). Harish has worked on cutting-edge distributed systems in storage and security domains. His contributions to the OpenSearch Project and expertise in cloud-native architecture have shaped modern, scalable data platforms. A graduate of GL Bajaj Institute of Technology, Harish is passionate about leveraging technology to solve complex challenges and is dedicated to ensuring FacioPay’s solutions meet the highest standards of security, scalability, and innovation.</p>
         </div>
         <div class="founder">
-          <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1750896000&v=beta&t=KTcwk3er1Z1AsIiYDJBVeN51w7gtOWTcHG3oU71jtDo">
+          <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1750896000&v=beta&t=KTcwk3er1Z1AsIiYDJBVeN51w7gtOWTcHG3oU71jtDo" alt="Siddharth Pandey">
           <h3>Siddharth Pandey</h3>
           <p>Siddharth Pandey has almost a decade of work experience in software engineering. Siddharth has held key roles at Amazon and LinkedIn, specializing in cloud technologies and software development. At Amazon, he contributed to Alexa’s cloud services, optimizing features for millions of users and devices. Holding a Master’s in Computer Science from Arizona State University and a Bachelor’s from Delhi College of Engineering, Siddharth excels in AWS, Java, distributed systems, and data analytics. His leadership at FacioPay merges technical expertise with a vision to transform digital payments.</p>
         </div>
       </div>
     </section>
 
-    <!-- Contact Us Section -->
     <section id="contact" class="section">
       <h2>Contact Us</h2>
       <p>If you have any questions or need assistance, feel free to reach out to us at <a href="mailto:faciopay2025@gmail.com">faciopay2025@gmail.com</a>.</p>
     </section>
-
   </main>
 
   <footer>
