--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   <header>
     <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/ff31890795f2fdb7c6802f1c0fc821fd61f2c070/faciopay%20Logo.png" alt="FacioPay Logo" class="logo">
     <nav>
-      <a href="javascript:void(0);" onclick="showTab('whatwedo')">What We Do</a>
+      <a href="javascript:void(0);" onclick="showTab('whatwedo')">What is FacioPay?</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
       <a href="javascript:void(0);" onclick="showTab('contact')">Contact Us</a>
     </nav>
@@ -295,7 +295,7 @@
 
   <main>
     <section id="whatwedo" class="section active">
-      <h2>What We Do</h2>
+      <h2>What is FacioPay?</h2>
       <p>FacioPay is revolutionizing the way you make payments. Imagine paying at your favorite store or splitting a bill with a friend, without ever needing your credit card or phone. Simply scan your face and go. We’re bringing the future of payments to the present, making transactions seamless, secure, and effortless. Experience the next level of convenience with FacioPay.</p>
 
     <div class="video-wrapper">
