--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>FacioPay - Next-Gen Payment App</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/faciopay%20symbol.png" />
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/a27f8662499fd627127a793a1aa1133520c0254f/faciopay%20favicon.png" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -285,7 +285,7 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/ff31890795f2fdb7c6802f1c0fc821fd61f2c070/faciopay%20Logo.png" alt="FacioPay Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/faciopay%20logo%20new.png" alt="FacioPay Logo" class="logo">
     <nav>
       <a href="javascript:void(0);" onclick="showTab('whatwedo')">What is FacioPay?</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
