--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     .logo {
-      height: 80px;
+      height: 100px;
     }
 
     nav {
@@ -285,7 +285,7 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/faciopay%20logo%20new.png" alt="FacioPay Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" alt="FacioPay Logo" class="logo">
     <nav>
       <a href="javascript:void(0);" onclick="showTab('whatwedo')">What is FacioPay?</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
