--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <section id="contact" class="section">
       <h2>Contact Us</h2>
-      <p>If you have any questions or need assistance, feel free to reach out to us at <a href="mailto:faciopay2025@gmail.com">faciopay2025@gmail.com</a>.</p>
+      <p>If you have any questions or need assistance, feel free to reach out to us at <a href="mailto:faciopay2025@gmail.com">kanakagrawal2010@gmail.com</a>.</p>
     </section>
   </main>
 
