--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   <main>
     <section id="whatwedo" class="section active">
       <h2>What is FacioPay?</h2>
-      <p>FacioPay is revolutionizing the way you make payments. Imagine paying at your favorite store or splitting a bill with a friend, without ever needing your credit card or phone. Simply scan your face and go. We’re bringing the future of payments to the present, making transactions seamless, secure, and effortless. Experience the next level of convenience with FacioPay.</p>
+      <p>Imagine paying at your favorite restaurant or sending money to a friend — without ever pulling out your phone or credit card. That’s what FacioPay makes possible. Using advanced facial recognition and simple gestures, we enable secure, touch-free payments in seconds. Just smile, wave, and you're done. FacioPay is redefining payments to be faster, easier, and more convenient than ever.</p>
 
     <div class="video-wrapper">
   <iframe 
