--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     }
 
     p {
-      text-align: center;
+      text-align: justify;
       font-size: 1.1rem;
       max-width: 1100px;
       margin: 0 auto 1.5rem;
