--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   <header>
     <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" alt="FacioPay Logo" class="logo">
     <nav>
-      <a href="javascript:void(0);" onclick="showTab('whatwedo')">What is FacioPay?</a>
+      <a href="javascript:void(0);" onclick="showTab('whatwedo')">About FacioPay</a>
       <a href="javascript:void(0);" onclick="showTab('founders')">Founders</a>
       <a href="javascript:void(0);" onclick="showTab('contact')">Contact Us</a>
     </nav>
@@ -295,7 +295,7 @@
 
   <main>
     <section id="whatwedo" class="section active">
-      <h2>What is FacioPay?</h2>
+      <h2>Introducing FacioPay: The Future of Payments</h2>
       <p>Imagine paying at your favorite restaurant or sending money to a friend — without ever pulling out your phone or credit card. That’s what FacioPay makes possible. Using advanced facial recognition and simple gestures, we enable secure, touch-free payments in seconds. Just smile, wave, and you're done. FacioPay is redefining payments to be faster, easier, and more convenient than ever.</p>
 
     <div class="video-wrapper">
