--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <style>
     :root {
       --dark-charcoal: #2A2A2A;
-      --copper: #82CAFF;
+      --copper: #2A2A2A;
       --matte-black: #2A2A2A;
       --soft-silver: #C0C0C0;
       --pure-white: #FFFFFF;
