--- a/index.html
+++ b/index.html
@@ -12,82 +12,119 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --dark-charcoal: #2A2A2A;
-      --copper: #2A2A2A;
-      --matte-black: #2A2A2A;
-      --soft-silver: #C0C0C0;
-      --pure-white: #FFFFFF;
-    }
+  :root {
+    --dark-teal: #003B4A;
+    --copper: #B87333;
+    --matte-black: #1C1C1C;
+    --soft-silver: #C0C0C0;
+    --pure-white: #FFFFFF;
+    --accent-blue: #007BFF;
+  }
 
-    body {
-      margin: 0;
-      font-family: 'Lato', sans-serif;
-      background-color: var(--pure-white);
-      color: var(--dark-charcoal);
-      overflow-x: hidden;
-    }
+  body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--pure-white);
+    color: var(--matte-black);
+    overflow-x: hidden;
+    font-size: 16px;
+    line-height: 1.6;
+  }
 
-    header {
-      background-color: var(--matte-black);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      flex-wrap: wrap;
-    }
+  header {
+    background-color: var(--dark-teal);
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    flex-wrap: wrap;
+  }
 
-    .logo {
-      height: 140px;
-    }
+  .logo {
+    height: 120px;
+  }
 
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 0.5rem;
-    }
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 
-    nav a {
-      margin: 0 1rem;
-      color: var(--pure-white);
-      text-decoration: none;
-      font-size: 1.1rem;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
+  nav a {
+    margin: 0 1.2rem;
+    color: var(--pure-white);
+    text-decoration: none;
+    font-size: 1.05rem;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    transition: color 0.3s ease;
+  }
 
-    nav a:hover {
-      color: var(--soft-silver);
-    }
+  nav a:hover {
+    color: var(--soft-silver);
+  }
 
-    main {
-      padding: 2rem 1rem;
-      max-width: 1200px;
-      margin: auto;
-    }
+  main {
+    padding: 3rem 2rem;
+    max-width: 1200px;
+    margin: auto;
+  }
 
-    .section {
-      display: none;
-    }
+  .section {
+    display: none;
+  }
 
-    .section.active {
-      display: block;
-    }
+  .section.active {
+    display: block;
+  }
 
-    h2 {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 2.2rem;
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: var(--copper);
-    }
+  h2 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 2.8rem;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--dark-teal);
+    letter-spacing: 1px;
+  }
 
+  h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--copper);
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.05rem;
+    color: var(--matte-black);
+    max-width: 800px;
+    margin: 0 auto 2rem;
+    text-align: center;
+  }
+
+  button {
+    background-color: var(--accent-blue);
+    color: var(--pure-white);
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  button:hover {
+    background-color: #0056b3;
+  }
     p {
       text-align: justify;
       font-size: 1.1rem;
